fixed margin top on small screen

--- a/cv.css
+++ b/cv.css
@@ -151,7 +151,17 @@ body{
         width: 80%;
         font-size: small;
     }
+    .nav_img{
+        width: 95px;
+        height: 76px;
+
+    }
+    .all{
+        margin-top: unset;
+        margin-top: 120px;
+    }
     .cv{
+       
         width: unset;
         width: 80%;
         margin: auto;
